add back old teaching

--- a/index.html
+++ b/index.html
@@ -62,6 +62,26 @@ Number Theory</i> 16 (2022), no. 1, 59-137) <a href="JNTtalkHandout.pdf"> Slides
    
   </ul>
 
+  <h3>Old Classes Taught</h3>
+  At JHU
+  <ul> 
+    <li> Spring 2024: Math 212 "Honors Linear Algebra" 
+    <li> Fall 2023: Instructor for Math 422 "Representation Theory" 
+    <li> Fall 2022: Instructor for Math 304 "Elementary Number Theory" </li>
+  </ul>
+ 
+  At UC Berkeley:
+  <ul>
+    <li>Spring 2021: GSI for Math 104 "Introduction to Analysis"
+    <li>Spring 2020: GSI for Math 250b "Commutative Algebra"/Math 254b "Number Theory"
+    <li>Spring 2019: GSI for Math 55 "Discrete Mathematics."</li>
+    <li>Spring 2018: GSI for Math 54 "Linear Algebra and Differential Equations." </li>
+    <li>Spring 2017: GSI for Math 53 "Multivariable Calculus."</li>
+    <li>Fall 2016: GSI for Math 53 "Multivariable Calculus."</li>
+    <li> Spring 2016: GSI for Math 54 "Linear Algebra and Differential Equations." </li>
+    <li>Fall 2015: GSI for Math 1A "Calculus I."</li>
+  </ul>
+
 
 
 </body>
