arxiv link golden gates

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Previously I was a postdoc with <a href="https://albertominguez.com/">Alberto Mi
   <h3>Papers and Preprints</h3>
   <ul>
 	<li>
-	(w/Shai Evra and Ori Parzanchevski) <a 	href="GoldenGatesDraft.pdf">Multi-Qubit Golden Gates</a> (draft) <a href="GoldenGatesSlideTalk.pdf"> Slides </a>
+	(w/Shai Evra and Ori Parzanchevski) <a 	href="https://arxiv.org/abs/2509.09047">Multi-Qubit Golden Gates</a> (preprint) <a href="GoldenGatesSlideTalk.pdf"> Slides </a>
 	</li>
 	<li> 
 	(w/<a href="https://mgerbelli.github.io/website/">Mathilde Gerbelli-Gauthier</a>) <a 	href="https://arxiv.org/abs/2410.01976">Root Number Equidistribution for Self-Dual Automorphic Representations on GL<sub>N</sub></a> (submitted) <a href = "EpsilonEquidistributionSchier.pdf">Slides</a>
