--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@ Previously I was a postdoc with <a href="https://albertominguez.com/">Alberto Mi
   <h3>Papers and Preprints</h3>
   <ul>
 	<li>
-	(w/Shai Evra and Ori Parzanchevski) <a 	href="https://arxiv.org/abs/2509.09047">Multi-Qubit Golden Gates</a> (preprint) <a href="GoldenGatesSlideTalk.pdf"> Slides </a>
+	(w/<a href="https://mgerbelli.github.io/website/">Mathilde Gerbelli-Gauthier</a> and Simon Marshall) <a 	href="https://arxiv.org/abs/2511.11063">Uniform Bounds and Uncertainty for Asymptotics of Representations of p-adic GL<sub>N</sub></a> (preprint)
+	</li>
+	<li>
+	(w/Shai Evra and <a href="https://math.huji.ac.il/~parzan/">Ori Parzanchevski</a>) <a 	href="https://arxiv.org/abs/2509.09047">Multi-Qubit Golden Gates</a> (preprint) <a href="GoldenGatesSlideTalk.pdf"> Slides </a>
 	</li>
 	<li> 
 	(w/<a href="https://mgerbelli.github.io/website/">Mathilde Gerbelli-Gauthier</a>) <a 	href="https://arxiv.org/abs/2410.01976">Root Number Equidistribution for Self-Dual Automorphic Representations on GL<sub>N</sub></a> (submitted) <a href = "EpsilonEquidistributionSchier.pdf">Slides</a>
