--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <h2>Rahul Dalal</h2>
 
  
-    <p>  I am currently working at <a href="https://www.succinct.xyz">Succinct</a> building zero-knowledge/succinct proof systems and hopefully exploring if there are useful connections to some of my pure math work through constructions of expander complexes. 
+    <p>  I am currently working at <a href="https://www.succinct.xyz">Succinct</a> building zero-knowledge/succinct proof systems and hopefully exploring if there are useful connections to some of my pure-math work through constructions of expander complexes. 
 
 Previously I was a postdoc with <a href="https://albertominguez.com/">Alberto Minguez</a> at the <a href="https://mathematik.univie.ac.at/en/">University of Vienna</a> and an NSF postdoc at <a href = "https://mathematics.jhu.edu/">Johns Hopkins</a> sponsored by <a href = "https://math.jhu.edu/~sakellar/">Yiannis Sakellaridis</a>. My academic math interests are in automorphic representations and the trace formula.</p> 
 
